[package]
name = "ssm-session"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-ecs = { version = "1.15.0", features = ["behavior-version-latest"] }
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["full"] }
