[package]
name = "ssm-session"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.4.0", features = ["behavior-version-latest"] }
aws-sdk-ecs = { version = "1.26.0", features = ["behavior-version-latest"] }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
