[package]
name = "ssm-session"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-ecs = { version = "1.57.1", features = ["behavior-version-latest"] }
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
